--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <body>
 	<h1>Hamilton on paras</h1>
 	<p style="color:red">Hamilton on selkeesti parempi ku Bottas</p>
+	<h2>
+		<img src="https://cdn.pixabay.com/photo/2020/10/23/21/13/china-town-5679982_1280.jpg" width="500" height="300"/>
+	</h2>
 </body>
 </html>
